<resources>
    <string name="app_name">GameScoreTracker</string>

    <string name="button_text_new_game">Nyt Spil</string>
    <string name="button_text_game_history">Tidligere Spil</string>

    <string name="button_text_rummy">500</string>
    <string name="button_text_whist">Whist</string>
    <string name="button_text_3_person_whist">3-mands whist</string>
    <string name="button_text_pirate_whist">Piratwhist</string>
    <string name="button_text_backgammon">Backgammon</string>
    <string name="button_add_player">Tilføj Spiller</string>
    <string name="button_done">Start</string>
    <string name="button_back">Tilbage</string>
    <string name="button_add">Tilføj</string>
    <string name="button_new_round">Ny Runde</string>
    <string name="button_save">Gem</string>
    <string name="button_start">Start</string>
    <string name="button_cancel">Anullér</string>
    <style name="button_minus_tricks">Minus Stik</style>
    <style name="button_minus_clubs">Minus Klør</style>
    <style name="button_minus_queens">Minus Damer</style>
    <style name="button_minus_king_of_clubs">Minus Klør Konge</style>
    <style name="button_solitaire">Kabale</style>
    <style name="button_new_game">Nyt Spil</style>

    <string name="text_view_spillere">Spillere:</string>
    <string name="text_view_whips">Antal vip?</string>
    <string name="text_view_game_played">Hvad blev der spillet?</string>
    <string name="text_view_suit_played">Hvilken kulør blev der spillet?</string>
    <string name="text_view_trick_count">Antal stik?</string>
    <string name="text_view_whos_playing">Hvem spiller?</string>

    <string name="checkbox_sun">Sol</string>
    <string name="checkbox_clean_sun">Gran Sol</string>
    <string name="checkbox_on_the_table">På bordet</string>
    <string name="checkbox_with">Med</string>
    <string name="checkbox_without">Uden</string>
    <string name="checkbox_halves">Halve</string>
    <string name="checkbox_whip">Vip</string>

    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="number_ten">10</string>
    <string name="number_eleven">11</string>
    <string name="number_twelve">12</string>
    <string name="number_thirteen">13</string>

    <string name="suit_hearts">Hjerter</string>
    <string name="suit_spades">Spar</string>
    <string name="suit_diamonds">Ruder</string>
    <string name="suit_clubs">Klør</string>

    <string name="alert_players_title">Spillere:</string>

    <string-array name="default_players">
        <item>Mor</item>
        <item>Far</item>
        <item>Søren</item>
        <item>Sune</item>
        <item>Simon</item>
    </string-array>

    <string name="edit_text_add_player">Navn</string>
</resources>
