<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/players_container"
    tools:context=".View.ParticipatingPlayersActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/text_view_spillere"
        android:textSize="25sp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/buttons_container">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/extra_player_button"
        android:text="@string/button_add_player"
        android:onClick="addPlayerFragment"
        android:layout_gravity="bottom"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/done_button"
            android:onClick="addPlayerFragment"
            android:text="@string/button_done"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_red_dark"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/back_button"
            android:text="@string/button_back"
            android:onClick="addPlayerFragment"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_green_light"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>